# python-tatuclient

./: .gitignore  .gitreview  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  README.md  README.rst  setup.cfg  test-requirements.txt  tox.ini
doc/examples/: recordset_create.py  recordset_crud.py  zone_create_primary.py  zone_create_secondary.py  zone_list_nameservers.py  zone_list_paging.py
doc/source/: conf.py  index.rst
doc/source/cli/: index.rst
doc/source/contributor/: contributing.rst  functional-tests.rst
doc/source/install/: index.rst
doc/source/reference/: index.rst
doc/source/user/: bindings.rst  index.rst  shell-examples.rst  shell-v2.rst  shell.rst
releasenotes/notes/: quota-commands-7ff037bddae95771.yaml
releasenotes/source/: conf.py  index.rst
tatuclient/: __init__.py  client.py  shell.py  utils.py  version.py
tatuclient/functionaltests/: base.py  client.py  config.py
tatuclient/functionaltests/v1/: fixtures.py  test_ca.py
tatuclient/functionaltests/v2/: fixtures.py  test_blacklist.py  test_recordsets.py  test_tlds.py  test_tsigkeys.py  test_zone.py  test_zone_export.py  test_zone_import.py  test_zone_transfer.py
tatuclient/osc/: plugin.py
tatuclient/tests/: base.py  test_designateclient.py  test_exceptions.py  test_tatuclient.py  test_utils.py
tatuclient/tests/v1/: __init__.py  test_ca.py  test_client.py  test_timeout.py
tatuclient/tests/v2/: __init__.py  test_blacklists.py  test_client.py  test_limits.py  test_nameservers.py  test_recordsets.py  test_reverse.py  test_service_statuses.py  test_timeout.py  test_tlds.py  test_tsigkeys.py  test_zones.py
tatuclient/v1/: base.py  ca.py  client.py  host.py  hostcert.py  pat.py  usercert.py  utils.py
tatuclient/v1/cli/: ca.py  common.py  host.py  hostcert.py  pat.py  usercert.py
tatuclient/v2/: base.py  ca.py  client.py  utils.py
tatuclient/v2/cli/: usercert.py
