[metadata]
name = python-tatuclient
summary = OpenStack SSH-as-a-Service - Client
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/python-tatuclient/latest
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Internet :: Name Service (SSH)

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    tatuclient

[entry_points]
tatuclient.versions =
    1 = tatuclient.v1.client:Client

openstack.cli.extension =
    ssh = tatuclient.osc.plugin

openstack.ssh.v1 =
    ssh_usercert_create = tatuclient.v1.cli.usercert:CreateUserCertCommand
    ssh_usercert_list = tatuclient.v1.cli.usercert:ListUserCertCommand
    ssh_usercert_show = tatuclient.v1.cli.usercert:ShowUserCertCommand
    ssh_usercert_revoke = tatuclient.v1.cli.usercert:RevokeUserCertCommand

    ssh_host_list = tatuclient.v1.cli.host:ListHostCommand
    ssh_host_show = tatuclient.v1.cli.host:ShowHostCommand

    ssh_hostcert_list = tatuclient.v1.cli.hostcert:ListHostCertCommand
    ssh_hostcert_show = tatuclient.v1.cli.hostcert:ShowHostCertCommand

    ssh_ca_create = tatuclient.v1.cli.ca:CreateCACommand
    ssh_ca_list = tatuclient.v1.cli.ca:ListCACommand
    ssh_ca_show = tatuclient.v1.cli.ca:ShowCACommand

    ssh_pat_list = tatuclient.v1.cli.pat:ListPATCommand

[build_sphinx]
builders = html,man
all-files = 1
warning-is-error = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = tatuclient/locale
domain = tatuclient

[update_catalog]
domain = tatuclient
output_dir = tatuclient/locale
input_file = tatuclient/locale/tatuclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tatuclient/locale/tatuclient.pot

[wheel]
universal = 1

[pbr]
autodoc_index_modules = True
api_doc_dir = reference/api
autodoc_exclude_modules =
  tatuclient.tests.*
  tatuclient.functionaltests.*
